--- a/Projects/4.Countries API/style.css
+++ b/Projects/4.Countries API/style.css
@@ -158,6 +158,7 @@ font-size: 18px;
     flex-direction: column;
     padding: 12px;
     gap: 24px;
+    align-items: center;
   }
 
   .search-container{
