--- a/Projects/4.Countries API/style.css
+++ b/Projects/4.Countries API/style.css
@@ -31,11 +31,20 @@ header {
   background-color: var(--elements-color);
 }
 
+.header-content p a{
+  text-decoration-line: none;
+  color: var(--text-color);
+}
+.header-content p a:hover{
+  background-color: #eee0e0;
+  color: black;
+}
 .header-content {
   max-width: 1200px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+
 
   
 }
